Update meta tags for Twitter and Open Graph
Updated Twitter site handle and Open Graph description.

--- a/index.html
+++ b/index.html
@@ -12,15 +12,14 @@
     
     
     <meta property="og:type" content="website" />
-    <meta property="og:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
 
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:site" content="@Lovable" />
+    <meta name="twitter:site" content="@Ahmed" />
     <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
     <meta property="og:title" content="Ahmed Mohamed">
   <meta name="twitter:title" content="Ahmed Mohamed">
-  <meta property="og:description" content="Portfolio">
-  <meta name="twitter:description" content="Portfolio">
+  <meta property="og:description" content="Ahmed's Portfolio">
+  <meta name="twitter:description" content="Ahmed's Portfolio">
   <link rel="icon" type="image/x-icon" href="https://storage.googleapis.com/gpt-engineer-file-uploads/bgwx5XaL4ASKA8XmNZDho5fiFZi2/uploads/1769540244500-Ahmed.jpg">
 </head>
 
