Update Twitter image meta tag URL

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <meta name="twitter:card" content="summary_large_image" />
     <meta name="twitter:site" content="@Ahmed" />
-    <meta name="twitter:image" content="https://lovable.dev/opengraph-image-p98pqg.png" />
+    <meta name="twitter:image" content="https://storage.googleapis.com/gpt-engineer-file-uploads/bgwx5XaL4ASKA8XmNZDho5fiFZi2/uploads/1769540244500-Ahmed.jpg" />
     <meta property="og:title" content="Ahmed Mohamed">
   <meta name="twitter:title" content="Ahmed Mohamed">
   <meta property="og:description" content="Ahmed's Portfolio">
